--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
         <div class="container">
             <nav class="header-navigation">
                 <ul class="menu">
-                    <li class="menu-item"><a href="#">Works</a></li>
-                    <li class="menu-item"><a href="#">Blog</a></li>
-                    <li class="menu-item"><a href="#">Contact</a></li>
+                    <li class="menu-item">
+                        <a href="#">Works</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Blog</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +51,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="featured">
             <div class="container">
                 <h2>Featured works</h2>
                 <article>
@@ -81,7 +87,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
             <ul>
                 <li>
